--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ig0re4ek.github.io/to-do-list-react/",
+  "homepage": "https://ig0re4ek.github.io/to-do-list-react",
   "name": "to-do-list-react",
   "private": true,
   "version": "0.0.0",
